kube/auth-postgress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  labels:
    app: auth-db
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
      role: service
  serviceName: auth-db
  template:
    metadata:
      labels:
        app: auth-db
        role: service
    spec:
      containers:
        - name: auth-db
          image: postgres
          args:
            - -p
            - "5432"
          ports:
            - containerPort: 5432
              name: auth-db
              protocol: TCP
          volumeMounts:
            - name: auth-db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: auth-db
          persistentVolumeClaim:
            claimName: auth-db
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  labels:
    app: auth-db
    role: service
spec:
  selector:
    app: auth-db
    role: service
  type: NodePort
  ports:
    - name: auth-db
      port: 5432
      targetPort: 5432
      protocol: TCP
