kube/dashboard-backend.yaml
###########################
# Deployment
###########################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-backend
  labels:
    app: dashboard-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-backend
  template:
    metadata:
      labels:
        app: dashboard-backend
    spec:
      containers:
      - args:
            - bash
            - -c
            - python manage.py makemigrations && python manage.py makemigrations dashboarduser && python manage.py migrate && python manage.py runserver 0.0.0.0:8002
        name: dashboard-backend
        image: nvallore/ms_dashboard:latest2
        ports:
          - containerPort: 8002
---
###########################
# Cluster IP Service
###########################

apiVersion: v1
kind: Service
metadata:
  name: dashboard-backend
spec:
  selector:
    app: dashboard-backend
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
