kube/dashboard-postgress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dashboard-db
  labels:
    app: dashboard-db
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-db
      role: service
  serviceName: dashboard-db
  template:
    metadata:
      labels:
        app: dashboard-db
        role: service
    spec:
      containers:
        - name: dashboard-db
          image: postgres
          args:
            - -p
            - "5435"
          ports:
            - containerPort: 5435
              name: dashboard-db
              protocol: TCP
          volumeMounts:
            - name: dashboard-db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: dashboard-db
          persistentVolumeClaim:
            claimName: dashboard-db
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-db
  labels:
    app: dashboard-db
    role: service
spec:
  selector:
    app: dashboard-db
    role: service
  type: NodePort
  ports:
    - name: dashboard-db
      port: 5435
      targetPort: 5435
      protocol: TCP
