kube/profile-postgress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: profile-db
  labels:
    app: profile-db
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-db
      role: service
  serviceName: profile-db
  template:
    metadata:
      labels:
        app: profile-db
        role: service
    spec:
      containers:
        - name: profile-db
          image: postgres
          args:
            - -p
            - "5433"
          ports:
            - containerPort: 5433
              name: profile-db
              protocol: TCP
          volumeMounts:
            - name: profile-db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: profile-db
          persistentVolumeClaim:
            claimName: profile-db
---
apiVersion: v1
kind: Service
metadata:
  name: profile-db
  labels:
    app: profile-db
    role: service
spec:
  selector:
    app: profile-db
    role: service
  type: NodePort
  ports:
    - name: profile-db
      port: 5433
      targetPort: 5433
      protocol: TCP
