kube/scheduler-backend.yaml
###########################
# Deployment
###########################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-backend
  labels:
    app: scheduler-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-backend
  template:
    metadata:
      labels:
        app: scheduler-backend
    spec:
      containers:
      - args:
            - bash
            - -c
            - npx prisma migrate deploy && npx prisma generate && PORT=3001 node index.js
        name: scheduler-backend
        image: nvallore/ms_scheduler
        ports:
          - containerPort: 3001
---
###########################
# Cluster IP Service
###########################

apiVersion: v1
kind: Service
metadata:
  name: scheduler-backend
spec:
  selector:
    app: scheduler-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
