kube/scheduler-postgress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scheduler-db
  labels:
    app: scheduler-db
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-db
      role: service
  serviceName: scheduler-db
  template:
    metadata:
      labels:
        app: scheduler-db
        role: service
    spec:
      containers:
        - name: scheduler-db
          image: postgres
          args:
            - -p
            - "5434"
          ports:
            - containerPort: 5434
              name: scheduler-db
              protocol: TCP
          volumeMounts:
            - name: scheduler-db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: scheduler-db
          persistentVolumeClaim:
            claimName: scheduler-db
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-db
  labels:
    app: scheduler-db
    role: service
spec:
  selector:
    app: scheduler-db
    role: service
  type: NodePort
  ports:
    - name: scheduler-db
      port: 5434
      targetPort: 5434
      protocol: TCP
