kube/we-connect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: we-connect-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: http://192.168.65.2:8000/validate/user
    # nginx.ingress.kubernetes.io/auth-url: http://192.168.49.2/auth/api/hello
    # nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-headers: X-XSRF-TOKEN,Accept,Accept-Encoding,Accept-Language,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Origin,Connection,Content-Length,Content-Type,Host,Referer,User-Agent
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/auth-snippet: | 
      if ( $request_uri = "/auth/api/logout" ) {
          return 200;
      }
      if ( $request_uri = "/auth/api/login" ) {
          return 200;
      }

spec:
    rules:
      - http:
          paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-backend
                port:
                  number: 8000
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard-backend
                port:
                  number: 8002
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: profile-backend
                port:
                  number: 8001
          - path: /scheduler
            pathType: Prefix
            backend:
              service:
                name: scheduler-backend
                port:
                  number: 3001
